add wssh + add username to devices + change config.repo_address + installer script + start script

--- a/.gitignore
+++ b/.gitignore
@@ -20,12 +20,7 @@
 
 /.idea/*
 
-/public/macros/.*
 
-/public/log/.*
-
-/certs/.*
-/vendor/
-/public/macros/
-/public/log/
-/certs/
+/public/macros/*
+/public/log/*
+/certs/*
